# RossmannKaggle

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONCEPTS.md  Dockerfile  EDGE_CASES.md  FutureIdeas.md  Future_Ideas.md  Futureideas.md  Makefile  Mini_Project_Linear_Regression.ipynb  PLAN.md  QUICKSTART.md  README.md  SPEC.md  TEST_COVERAGE_ANALYSIS.md  azure-pipelines.yml  docker-compose.yml  futureideas.md  new.md  plan.md  requirements.txt  sliderule_dsi_json_exercise.ipynb  sliderule_dsi_xml_exercise.ipynb
forecasting-product/: pyproject.toml  requirements-fabric.txt  requirements.txt  setup.py
forecasting-product/configs/: base_config.yaml.legacy  fabric_config.yaml  lightgbm_config.yaml  m5_monthly_config.yaml  m5_weekly_config.yaml  platform_config.yaml  sku_mapping_config.yaml  weekly_demo_config.yaml  xgboost_config.yaml
forecasting-product/frontend/: .env.local.example  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  test-e2e-flow.js  test-m5-monthly-e2e.js  test-m5-weekly-e2e.js  test-weekly-e2e.js  vitest.config.ts
forecasting-product/notebooks/: 01_data_prep.py  02_backtest.py  03_forecast.py  04_deploy.py  demo_forecast_platform.ipynb  rossmann_eval_output.txt  rossmann_expanded_eval_output.txt  rossmann_platform_demo.ipynb  run_rossmann_eval.py  run_rossmann_full_platform.py
forecasting-product/scripts/: bless_m5_baseline.py  docker_seed.py  generate_weekly_demo.py  predict.py  prepare_m5_monthly.py  prepare_m5_weekly.py  run_backtest.py  run_sku_mapping.py  serve.py  spark_deploy.py  spark_forecast.py  train.py
forecasting-product/src/: __init__.py
forecasting-product/streamlit/: app.py  home.py  utils.py
forecasting-product/tests/: conftest.py  test_ai_anomaly_triage.py  test_ai_api.py  test_fva.py  (+54 more)
(+459 files in other folders)
